--- a/styles/contact.css
+++ b/styles/contact.css
@@ -15,6 +15,10 @@ footer{
   bottom: 0px;
 }
 
+.text{
+  color: #FFFFFF;
+}
+
 h1{
   color:#160101;
 }
@@ -23,9 +27,6 @@ p{
   color:#160101;
 }
 
-p.footer{
-  color:#FFFFFF;
-}
 
 /* Remove default link settings*/
 a {
@@ -125,14 +126,15 @@ label {
 
 .message{
   font-size: 20px;
-  position: relative;
+  position: absolute;
   top:300px;
+  left:700px;
   text-align: center;
 }
 
 .return{
-  position: relative;
-  top:300px;
+  position: absolute;
+  top:400px;
   left:850px;
   text-align: center;
   text-decoration: underline;
@@ -161,7 +163,7 @@ label {
   }
 
 
- /*Hide the links into the menu*/
+  /*Hide the links into the menu*/
   ul.navigation li
   {
     display: none;
@@ -229,10 +231,11 @@ label {
 
   .message{
     top:200px;
+    left:80px;
   }
 
   .return{
-    top:200px;
+    top:250px;
     left:20px;
   }
 
@@ -282,16 +285,27 @@ label {
     font-size: 16px;
   }
 
+  .message{
+  top:300px;
+  left:150px;
+}
+
+.return{
+  top:400px;
+  left:300px;
+}
+
 }
 
 
 /*---------------------------------------------------------------------LAPTOP VERSION!!!--------------------------------------------------------------------------------------*/
 
+/*Whilst the width is between 800px and 1600px do the following*/
 @media screen and (min-width: 800px) and (max-width: 1600px){
-
+  
   ul.navigation {
-    max-width: 1500px;
-    min-width: 1500px;
+    max-width: 1600px;
+    min-width: 1600px;
   }
 
   ul.navigation li {
@@ -327,6 +341,11 @@ label {
     width: 70px;
     padding-top: 5px;
     font-size: 16px;
+  }
+
+   .message{
+    top:200px;
+    left:450px;
   }
 
   .return{
