--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -34,7 +34,7 @@ body {
 }
 
 footer{
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	height: 45px;
 	background-color: #393939;
@@ -220,10 +220,6 @@ ul.navigation li.icon {
 /*Whilst the width is between 800px and 1600px do the following*/
 @media screen and (min-width: 800px) and (max-width: 1600px){
 
-	body{
-		overflow-x: hidden;
-	}
-
 	.title{
 		top: 300px;
 		left:350px;
@@ -236,8 +232,8 @@ ul.navigation li.icon {
 	}
 
 	ul.navigation {
-		max-width: 1500px;
-		min-width: 1500px;
+		max-width: 1600px;
+		min-width: 1600px;
 	}
 
 	ul.navigation li {
