--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,3 @@
-/*General styles that will be applied*/
 body {
 	font-size: 16px;
 	color: #FFFFFF;
@@ -16,13 +15,13 @@ header {
 }
 
 footer{
-	position: fixed;
-	width: 100%;
-	height: 45px;
-	background-color: #393939;
-	border-top:2px solid;
-	overflow:hidden;
-	bottom: 0px;
+  position: absolute;
+  top:3600px;
+  width: 100%;
+  height: 45px;
+  background-color: #393939;
+  border-top:2px solid;
+  overflow:hidden;
 }
 
 
@@ -78,7 +77,6 @@ ul.navigation li.icon {
 /*Settings for each flipbook, also a shadow effect to give it a glow*/
 
 .project-flipbook .page {
-
 	background-size:100% 100%;
 }
 
@@ -365,7 +363,9 @@ ul.navigation li.icon {
 
 	}
 
-
+	footer{
+		top:1500px;
+	}
 
 	ul.navigation {
 		max-width: 1000px;
@@ -483,10 +483,9 @@ ul.navigation li.icon {
 /*Whilst the width is between 800px and 1600px do the following*/
 @media screen and (min-width: 800px) and (max-width: 1600px){
 
-
 	ul.navigation {
-		max-width: 1500px;
-		min-width: 1500px;
+		max-width: 1600px;
+		min-width: 1600px;
 	}
 
 	ul.navigation li {
@@ -613,6 +612,10 @@ ul.navigation li.icon {
 
 /*Whilst the width is above 1600px do the following*/
 @media screen and (min-width: 1600px) {
+
+	body{
+		overflow-x: hidden;
+	}
 
 
 	/*------Header positioning for each project on Desktop-----*/
